[Qt] Speed up text layouting https://bugs.webkit.org/show_bug.cgi?id=31719

Patch by Simon Hausmann <simon.hausmann@nokia.com> on 2010-04-29
Reviewed by Kenneth Rohde Christiansen.

Use QFontMetrics::width() for the text width calculation instead
of QTextLayout. This avoids expensive bearing calculations and the
line breaking code.

* platform/graphics/qt/FontQt.cpp:
(WebCore::Font::floatWidthForComplexText):



Canonical link: https://commits.webkit.org/49762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58507 268f45cc-cd09-0410-ab3c-d52691b4dbfc